fixed z-index issue

--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@ body{
     height: 128px;
     position: sticky;
     top:0;
+    z-index:99;
 }
 .top-row{
     display: flex;
